--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,28 +7,11 @@
 		"import"
 	],
 	"rules": {
-		"class-methods-use-this": ["off"],
-		"max-len": ["error", 120],
-		"no-underscore-dangle": ["off"],
-		"no-prototype-builtins": ["off"],
-		"no-trailing-spaces": ["off"],
-		"no-use-before-define": ["off"],
-		"object-curly-spacing": ["off", "turn off because not working well with ES6 import and typical object syntax"],
-		"quote-props": ["error", "consistent"],
-		"import/extensions": ["off"],
-		"import/no-unresolved": ["off"],
-		"import/no-extraneous-dependencies": ["off"],
-		"import/no-named-as-default": ["off"],
-		"import/no-named-as-default-member": ["off"],
-		"react/sort-comp": ["off"],
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"react/no-did-mount-set-state": ["off"],
-		"react/no-unused-prop-types": ["off", "turn off because this is buggy"],
-		"react/prefer-stateless-function": ["off"],
-		"react/forbid-prop-types": ["off"],
-		"react/prop-types": ["off", "not working well with redux"],
-		"jsx-a11y/href-no-hash": ["off"],
-		"jsx-a11y/no-static-element-interactions": ["off"],
-		"strict": ["off"]
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "react/prefer-stateless-function": [0],
+      "react/sort-comp": [0],
+      "import/no-extraneous-dependencies": [0],
+      "class-methods-use-this": [0],
+      "jsx-a11y/aria-role": [0]
 	}
 }
