--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
-    "import-sort-style-renke": "^3.0.0"
+    "import-sort-style-absolute": "^1.0.1"
   },
   "importSort": {
     ".js, .jsx, .es6, .es": {
       "parser": "babylon",
-      "style": "renke"
+      "style": "absolute"
     }
   }
 }
